mi segundo commit

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           placeholder="nombre completo"
           required
         />
-        <label for="correo" class="formulario__email">* Email</label>
+        <label for="correo" class="formulario__email">* Correo</label>
         <input
           type="email"
           id="correo"
