mi tercer commit

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           placeholder="donde vive"
         />
         <!-- Encuesta -->
-        <h5 class="formulario__tituloEncuesta">¿Cómo has llegado aquí?</h5>
+        <h5 class="formulario__tituloEncuesta">¿Cómo llegaste aquí?</h5>
         
         <section id="encuesta">
           <label for="encuesta-redes" class="formulario__encuesta"
