--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- MAIN -->
     <main class="main">
       <!-- titulos -->
-      <h1 class="main__titulo">La Cesta de Navidad 2020</h1>
+      <h1 class="main__titulo"></h1>
       <h3 class="main__subtitulo">
         Suscríbete y podrás participar en el sorteo el día 24 de Diciembre del
         2023
@@ -43,7 +43,7 @@
       <!-- MÓDULO Formulario -->
       <form action="gracias.html" class="main__formulario">
         <!-- nombre, email, localidad -->
-        <label for="nombre" class="formulario__nombre">* Nombre</label>
+        <label for="nombre" class="formulario__nombre">* Name</label>
         <input
           type="text"
           id="nombre"
