--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- MAIN -->
     <main class="main">
       <!-- titulos -->
-      <h1 class="main__titulo"></h1>
+      <h1 class="main__titulo">NAVIDAD 2023</h1>
       <h3 class="main__subtitulo">
         Suscríbete y podrás participar en el sorteo el día 24 de Diciembre del
         2023
