--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           placeholder="correo personal"
           required
         />
-        <label for="localidad" class="formulario__localidad">Localidad</label>
+        <label for="localidad" class="formulario__localidad">Lugar</label>
         <input
           type="text"
           id="localidad"
